--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -183,8 +183,10 @@
     <ClCompile Include="chapter5\Edge\SceneEdge.cpp" />
     <ClCompile Include="chapter5\Gamma\SceneGamma.cpp" />
     <ClCompile Include="chapter5\MSAA\SceneMSAA.cpp" />
+    <ClCompile Include="chapter6\Mesh\vbomeshadj.cpp" />
     <ClCompile Include="chapter6\PointsSprite\ScenePointsSprite.cpp" />
     <ClCompile Include="chapter6\ShadeWire\SceneShadeWire.cpp" />
+    <ClCompile Include="chapter6\Silhouette\SceneSilhouette.cpp" />
     <ClCompile Include="OpenGL.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -250,6 +252,9 @@
     <None Include="chapter6\ShadeWire\Shader\ShadeWireShader.frag" />
     <None Include="chapter6\ShadeWire\Shader\ShadeWireShader.gs" />
     <None Include="chapter6\ShadeWire\Shader\ShadeWireShader.vert" />
+    <None Include="chapter6\Silhouette\Shader\SilhouetteShader.frag" />
+    <None Include="chapter6\Silhouette\Shader\SilhouetteShader.gs" />
+    <None Include="chapter6\Silhouette\Shader\SilhouetteShader.vert" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="chapter1\GLShader.hpp" />
@@ -291,8 +296,10 @@
     <ClInclude Include="chapter5\Edge\SceneEdge.h" />
     <ClInclude Include="chapter5\Gamma\SceneGamma.h" />
     <ClInclude Include="chapter5\MSAA\SceneMSAA.h" />
+    <ClInclude Include="chapter6\Mesh\vbomeshadj.h" />
     <ClInclude Include="chapter6\PointsSprite\ScenePointsSprite.h" />
     <ClInclude Include="chapter6\ShadeWire\SceneShadeWire.h" />
+    <ClInclude Include="chapter6\Silhouette\SceneSilhouette.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="chapter4\Texture\brick1.jpg" />
