--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -184,9 +184,11 @@
     <ClCompile Include="chapter5\Gamma\SceneGamma.cpp" />
     <ClCompile Include="chapter5\MSAA\SceneMSAA.cpp" />
     <ClCompile Include="chapter6\Mesh\vbomeshadj.cpp" />
+    <ClCompile Include="chapter6\Mesh\vboteapotpatch.cpp" />
     <ClCompile Include="chapter6\PointsSprite\ScenePointsSprite.cpp" />
     <ClCompile Include="chapter6\ShadeWire\SceneShadeWire.cpp" />
     <ClCompile Include="chapter6\Silhouette\SceneSilhouette.cpp" />
+    <ClCompile Include="chapter6\TessCurve\SceneTessCurve.cpp" />
     <ClCompile Include="OpenGL.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -255,6 +257,10 @@
     <None Include="chapter6\Silhouette\Shader\SilhouetteShader.frag" />
     <None Include="chapter6\Silhouette\Shader\SilhouetteShader.gs" />
     <None Include="chapter6\Silhouette\Shader\SilhouetteShader.vert" />
+    <None Include="chapter6\TessCurve\Shader\TessCurveShader.frag" />
+    <None Include="chapter6\TessCurve\Shader\TessCurveShader.tcs" />
+    <None Include="chapter6\TessCurve\Shader\TessCurveShader.tes" />
+    <None Include="chapter6\TessCurve\Shader\TessCurveShader.vert" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="chapter1\GLShader.hpp" />
@@ -297,9 +303,11 @@
     <ClInclude Include="chapter5\Gamma\SceneGamma.h" />
     <ClInclude Include="chapter5\MSAA\SceneMSAA.h" />
     <ClInclude Include="chapter6\Mesh\vbomeshadj.h" />
+    <ClInclude Include="chapter6\Mesh\vboteapotpatch.h" />
     <ClInclude Include="chapter6\PointsSprite\ScenePointsSprite.h" />
     <ClInclude Include="chapter6\ShadeWire\SceneShadeWire.h" />
     <ClInclude Include="chapter6\Silhouette\SceneSilhouette.h" />
+    <ClInclude Include="chapter6\TessCurve\SceneTessCurve.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="chapter4\Texture\brick1.jpg" />
