--- a/OpenGL/OpenGL.vcxproj.filters
+++ b/OpenGL/OpenGL.vcxproj.filters
@@ -184,6 +184,12 @@
     <Filter Include="ソース ファイル\chapter6\Mesh">
       <UniqueIdentifier>{081edf74-1e44-48ca-8b29-1b741e5a4546}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\chapter6\TessCurve">
+      <UniqueIdentifier>{dd94b358-db2e-462a-b217-8519374c8563}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\chapter6\TessCurve\Shader">
+      <UniqueIdentifier>{119371fc-a4f5-4466-9ff7-977c652f5d5b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="OpenGL.cpp">
@@ -307,6 +313,12 @@
       <Filter>ソース ファイル\chapter6\Silhouette</Filter>
     </ClCompile>
     <ClCompile Include="chapter6\Mesh\vbomeshadj.cpp">
+      <Filter>ソース ファイル\chapter6\Mesh</Filter>
+    </ClCompile>
+    <ClCompile Include="chapter6\TessCurve\SceneTessCurve.cpp">
+      <Filter>ソース ファイル\chapter6\TessCurve</Filter>
+    </ClCompile>
+    <ClCompile Include="chapter6\Mesh\vboteapotpatch.cpp">
       <Filter>ソース ファイル\chapter6\Mesh</Filter>
     </ClCompile>
   </ItemGroup>
@@ -506,6 +518,18 @@
     <None Include="chapter6\Silhouette\Shader\SilhouetteShader.vert">
       <Filter>ソース ファイル\chapter6\Silhouette\Shader</Filter>
     </None>
+    <None Include="chapter6\TessCurve\Shader\TessCurveShader.frag">
+      <Filter>ソース ファイル\chapter6\TessCurve\Shader</Filter>
+    </None>
+    <None Include="chapter6\TessCurve\Shader\TessCurveShader.tes">
+      <Filter>ソース ファイル\chapter6\TessCurve\Shader</Filter>
+    </None>
+    <None Include="chapter6\TessCurve\Shader\TessCurveShader.vert">
+      <Filter>ソース ファイル\chapter6\TessCurve\Shader</Filter>
+    </None>
+    <None Include="chapter6\TessCurve\Shader\TessCurveShader.tcs">
+      <Filter>ソース ファイル\chapter6\TessCurve\Shader</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="chapter1\GLShader.hpp">
@@ -635,6 +659,12 @@
       <Filter>ソース ファイル\chapter6\Silhouette</Filter>
     </ClInclude>
     <ClInclude Include="chapter6\Mesh\vbomeshadj.h">
+      <Filter>ソース ファイル\chapter6\Mesh</Filter>
+    </ClInclude>
+    <ClInclude Include="chapter6\TessCurve\SceneTessCurve.h">
+      <Filter>ソース ファイル\chapter6\TessCurve</Filter>
+    </ClInclude>
+    <ClInclude Include="chapter6\Mesh\vboteapotpatch.h">
       <Filter>ソース ファイル\chapter6\Mesh</Filter>
     </ClInclude>
   </ItemGroup>
