--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -148,7 +148,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="chapter1\GLShader.cpp" />
-    <ClCompile Include="chapter1\Glslprogram.cpp" />
     <ClCompile Include="chapter2\ADSScene.cpp" />
     <ClCompile Include="chapter2\DiscardScene.cpp" />
     <ClCompile Include="chapter2\FlatScene.cpp" />
@@ -186,6 +185,7 @@
     <ClCompile Include="chapter6\Mesh\vbomeshadj.cpp" />
     <ClCompile Include="chapter6\Mesh\vboteapotpatch.cpp" />
     <ClCompile Include="chapter6\PointsSprite\ScenePointsSprite.cpp" />
+    <ClCompile Include="chapter6\QuadTess\SceneQuadTess.cpp" />
     <ClCompile Include="chapter6\ShadeWire\SceneShadeWire.cpp" />
     <ClCompile Include="chapter6\Silhouette\SceneSilhouette.cpp" />
     <ClCompile Include="chapter6\TessCurve\SceneTessCurve.cpp" />
@@ -251,6 +251,11 @@
     <None Include="chapter6\PointsSprite\Shader\PointsSpriteShader.frag" />
     <None Include="chapter6\PointsSprite\Shader\PointsSpriteShader.gs" />
     <None Include="chapter6\PointsSprite\Shader\PointsSpriteShader.vert" />
+    <None Include="chapter6\QuadTess\Shader\QuadTessShader.frag" />
+    <None Include="chapter6\QuadTess\Shader\QuadTessShader.gs" />
+    <None Include="chapter6\QuadTess\Shader\QuadTessShader.tcs" />
+    <None Include="chapter6\QuadTess\Shader\QuadTessShader.tes" />
+    <None Include="chapter6\QuadTess\Shader\QuadTessShader.vert" />
     <None Include="chapter6\ShadeWire\Shader\ShadeWireShader.frag" />
     <None Include="chapter6\ShadeWire\Shader\ShadeWireShader.gs" />
     <None Include="chapter6\ShadeWire\Shader\ShadeWireShader.vert" />
@@ -264,7 +269,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="chapter1\GLShader.hpp" />
-    <ClInclude Include="chapter1\Glslprogram.h" />
     <ClInclude Include="chapter2\ADSScene.h" />
     <ClInclude Include="chapter2\defines.h" />
     <ClInclude Include="chapter2\DiscardScene.h" />
@@ -305,6 +309,7 @@
     <ClInclude Include="chapter6\Mesh\vbomeshadj.h" />
     <ClInclude Include="chapter6\Mesh\vboteapotpatch.h" />
     <ClInclude Include="chapter6\PointsSprite\ScenePointsSprite.h" />
+    <ClInclude Include="chapter6\QuadTess\SceneQuadTess.h" />
     <ClInclude Include="chapter6\ShadeWire\SceneShadeWire.h" />
     <ClInclude Include="chapter6\Silhouette\SceneSilhouette.h" />
     <ClInclude Include="chapter6\TessCurve\SceneTessCurve.h" />
