--- a/OpenGL/OpenGL.vcxproj.filters
+++ b/OpenGL/OpenGL.vcxproj.filters
@@ -202,6 +202,12 @@
     <Filter Include="ソース ファイル\chapter6\TessTeapot\Shader">
       <UniqueIdentifier>{c892d033-a465-4a39-aea2-2e6111a964a5}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\chapter6\TessDepth">
+      <UniqueIdentifier>{638bd691-c18c-40ce-b680-53e99a00f798}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\chapter6\TessDepth\Shader">
+      <UniqueIdentifier>{f840946b-0e80-4434-9a15-8eebd04d12cc}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="OpenGL.cpp">
@@ -335,6 +341,9 @@
     </ClCompile>
     <ClCompile Include="chapter6\TessTeapot\SceneTessTeapot.cpp">
       <Filter>ソース ファイル\chapter6\TessTeapot</Filter>
+    </ClCompile>
+    <ClCompile Include="chapter6\TessDepth\SceneTessDepth.cpp">
+      <Filter>ソース ファイル\chapter6\TessDepth</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -575,6 +584,21 @@
     <None Include="chapter6\TessTeapot\Shader\TessTeapotShader.vert">
       <Filter>ソース ファイル\chapter6\TessTeapot\Shader</Filter>
     </None>
+    <None Include="chapter6\TessDepth\Shader\TessDepthShader.frag">
+      <Filter>ソース ファイル\chapter6\TessDepth\Shader</Filter>
+    </None>
+    <None Include="chapter6\TessDepth\Shader\TessDepthShader.gs">
+      <Filter>ソース ファイル\chapter6\TessDepth\Shader</Filter>
+    </None>
+    <None Include="chapter6\TessDepth\Shader\TessDepthShader.tcs">
+      <Filter>ソース ファイル\chapter6\TessDepth\Shader</Filter>
+    </None>
+    <None Include="chapter6\TessDepth\Shader\TessDepthShader.tes">
+      <Filter>ソース ファイル\chapter6\TessDepth\Shader</Filter>
+    </None>
+    <None Include="chapter6\TessDepth\Shader\TessDepthShader.vert">
+      <Filter>ソース ファイル\chapter6\TessDepth\Shader</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="chapter1\GLShader.hpp">
@@ -714,6 +738,9 @@
     </ClInclude>
     <ClInclude Include="chapter6\TessTeapot\SceneTessTeapot.h">
       <Filter>ソース ファイル\chapter6\TessTeapot</Filter>
+    </ClInclude>
+    <ClInclude Include="chapter6\TessDepth\SceneTessDepth.h">
+      <Filter>ソース ファイル\chapter6\TessDepth</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
