ランダムなサンプリングでソフトな影のエッジを作り出す

--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -192,8 +192,10 @@
     <ClCompile Include="chapter6\TessDepth\SceneTessDepth.cpp" />
     <ClCompile Include="chapter6\TessTeapot\SceneTessTeapot.cpp" />
     <ClCompile Include="chapter7\frustum.cpp" />
+    <ClCompile Include="chapter7\Jitter\SceneJitter.cpp" />
     <ClCompile Include="chapter7\Pcf\ScenePcf.cpp" />
     <ClCompile Include="chapter7\ShadowMap\SceneShadowMap.cpp" />
+    <ClCompile Include="chapter7\VBOMesh7.cpp" />
     <ClCompile Include="OpenGL.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -281,6 +283,8 @@
     <None Include="chapter6\TessTeapot\Shader\TessTeapotShader.tcs" />
     <None Include="chapter6\TessTeapot\Shader\TessTeapotShader.tes" />
     <None Include="chapter6\TessTeapot\Shader\TessTeapotShader.vert" />
+    <None Include="chapter7\Jitter\Shader\JitterShader.frag" />
+    <None Include="chapter7\Jitter\Shader\JitterShader.vert" />
     <None Include="chapter7\Pcf\Shader\PcfShader.frag" />
     <None Include="chapter7\Pcf\Shader\PcfShader.vert" />
     <None Include="chapter7\ShadowMap\Shader\ShadowMapShader.frag" />
@@ -337,8 +341,10 @@
     <ClInclude Include="chapter6\TessDepth\SceneTessDepth.h" />
     <ClInclude Include="chapter6\TessTeapot\SceneTessTeapot.h" />
     <ClInclude Include="chapter7\frustum.h" />
+    <ClInclude Include="chapter7\Jitter\SceneJitter.h" />
     <ClInclude Include="chapter7\Pcf\ScenePcf.h" />
     <ClInclude Include="chapter7\ShadowMap\SceneShadowMap.h" />
+    <ClInclude Include="chapter7\VBOMesh7.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="chapter4\Texture\brick1.jpg" />
