--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -191,6 +191,7 @@
     <ClCompile Include="chapter6\TessCurve\SceneTessCurve.cpp" />
     <ClCompile Include="chapter6\TessDepth\SceneTessDepth.cpp" />
     <ClCompile Include="chapter6\TessTeapot\SceneTessTeapot.cpp" />
+    <ClCompile Include="chapter7\Eao\SceneEao.cpp" />
     <ClCompile Include="chapter7\frustum.cpp" />
     <ClCompile Include="chapter7\Jitter\SceneJitter.cpp" />
     <ClCompile Include="chapter7\Pcf\ScenePcf.cpp" />
@@ -283,6 +284,8 @@
     <None Include="chapter6\TessTeapot\Shader\TessTeapotShader.tcs" />
     <None Include="chapter6\TessTeapot\Shader\TessTeapotShader.tes" />
     <None Include="chapter6\TessTeapot\Shader\TessTeapotShader.vert" />
+    <None Include="chapter7\Eao\Shader\EaoShader.frag" />
+    <None Include="chapter7\Eao\Shader\EaoShader.vert" />
     <None Include="chapter7\Jitter\Shader\JitterShader.frag" />
     <None Include="chapter7\Jitter\Shader\JitterShader.vert" />
     <None Include="chapter7\Pcf\Shader\PcfShader.frag" />
@@ -340,6 +343,7 @@
     <ClInclude Include="chapter6\TessCurve\SceneTessCurve.h" />
     <ClInclude Include="chapter6\TessDepth\SceneTessDepth.h" />
     <ClInclude Include="chapter6\TessTeapot\SceneTessTeapot.h" />
+    <ClInclude Include="chapter7\Eao\SceneEao.h" />
     <ClInclude Include="chapter7\frustum.h" />
     <ClInclude Include="chapter7\Jitter\SceneJitter.h" />
     <ClInclude Include="chapter7\Pcf\ScenePcf.h" />
