--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -72,16 +72,16 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)venders\FreeImage;C:\jpegsr9e;$(SolutionDir)venders\glew-2.1.0\include;$(SolutionDir)venders\glfw\include;$(SolutionDir)venders\glm\;C:\Users\Yuka Endo\OpenGL4.0\venders\libnoise\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Yuka Endo\OpenGL4.0\venders\libnoise\bin;$(SolutionDir)venders\FreeImage;C:\jpegsr9e\Release\x64;$(SolutionDir)venders\glew-2.1.0\lib\Release\x64\;$(SolutionDir)venders\glfw\lib-vc2019;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Yuka Endo\OpenGL4.0\venders\freeglut\include;$(SolutionDir)venders\FreeImage;C:\jpegsr9e;$(SolutionDir)venders\glew-2.1.0\include;$(SolutionDir)venders\glfw\include;$(SolutionDir)venders\glm\;C:\Users\Yuka Endo\OpenGL4.0\venders\libnoise\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Yuka Endo\OpenGL4.0\venders\freeglut\bin;C:\Users\Yuka Endo\OpenGL4.0\venders\libnoise\bin;$(SolutionDir)venders\FreeImage;C:\jpegsr9e\Release\x64;$(SolutionDir)venders\glew-2.1.0\lib\Release\x64\;$(SolutionDir)venders\glfw\lib-vc2019;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)venders\FreeImage;C:\jpegsr9e;$(SolutionDir)venders\glew-2.1.0\include;$(SolutionDir)venders\glfw\include;$(SolutionDir)venders\glm\;C:\Users\Yuka Endo\OpenGL4.0\venders\libnoise\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Yuka Endo\OpenGL4.0\venders\libnoise\bin;$(SolutionDir)venders\FreeImage;C:\jpegsr9e\Release\x64;$(SolutionDir)venders\glew-2.1.0\lib\Release\x64\;$(SolutionDir)venders\glfw\lib-vc2019;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Yuka Endo\OpenGL4.0\venders\freeglut\include;$(SolutionDir)venders\FreeImage;C:\jpegsr9e;$(SolutionDir)venders\glew-2.1.0\include;$(SolutionDir)venders\glfw\include;$(SolutionDir)venders\glm\;C:\Users\Yuka Endo\OpenGL4.0\venders\libnoise\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Yuka Endo\OpenGL4.0\venders\freeglut\bin;C:\Users\Yuka Endo\OpenGL4.0\venders\libnoise\bin;$(SolutionDir)venders\FreeImage;C:\jpegsr9e\Release\x64;$(SolutionDir)venders\glew-2.1.0\lib\Release\x64\;$(SolutionDir)venders\glfw\lib-vc2019;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -96,8 +96,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)venders\FreeImage;C:\jpegsr9e\Release\x64;$(SolutionDir)venders\glew-2.1.0\lib\Release\x64;C:\Users\Yuka Endo\OpenGL4.0\venders\libnoise\bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;jpeg.lib;FreeImage.lib;noise.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\Yuka Endo\OpenGL4.0\venders\freeglut\bin;$(SolutionDir)venders\FreeImage;C:\jpegsr9e\Release\x64;$(SolutionDir)venders\glew-2.1.0\lib\Release\x64;C:\Users\Yuka Endo\OpenGL4.0\venders\libnoise\bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;jpeg.lib;FreeImage.lib;noise.lib;freeglut.lib;freeglut_static.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -126,8 +126,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)venders\FreeImage;C:\jpegsr9e\Release\x64;$(SolutionDir)venders\glew-2.1.0\lib\Release\x64;C:\Users\Yuka Endo\OpenGL4.0\venders\libnoise\bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;jpeg.lib;FreeImage.lib;noise.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\Yuka Endo\OpenGL4.0\venders\freeglut\bin;$(SolutionDir)venders\FreeImage;C:\jpegsr9e\Release\x64;$(SolutionDir)venders\glew-2.1.0\lib\Release\x64;C:\Users\Yuka Endo\OpenGL4.0\venders\libnoise\bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;jpeg.lib;FreeImage.lib;noise.lib;freeglut.lib;freeglut_static.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -197,6 +197,8 @@
     <ClCompile Include="chapter7\Pcf\ScenePcf.cpp" />
     <ClCompile Include="chapter7\ShadowMap\SceneShadowMap.cpp" />
     <ClCompile Include="chapter7\VBOMesh7.cpp" />
+    <ClCompile Include="chapter8\Noise\NoiseTex.cpp" />
+    <ClCompile Include="chapter8\Noise\SceneNoiseTex.cpp" />
     <ClCompile Include="OpenGL.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -349,6 +351,8 @@
     <ClInclude Include="chapter7\Pcf\ScenePcf.h" />
     <ClInclude Include="chapter7\ShadowMap\SceneShadowMap.h" />
     <ClInclude Include="chapter7\VBOMesh7.h" />
+    <ClInclude Include="chapter8\Noise\NoiseTex.h" />
+    <ClInclude Include="chapter8\Noise\SceneNoiseTex.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="chapter4\Texture\brick1.jpg" />
